--- a/JquerySPA/src/common/about.html
+++ b/JquerySPA/src/common/about.html
@@ -1,15 +1,9 @@
 ﻿<link href="common/about.css" rel="stylesheet" />
 
-<div class="row">
-    <div class="col-xs-12">
-        <h1>About Page</h1>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-xs-12">
-        <button onclick="testing()">Click Me</button>
-    </div>
+<div class="jumbotron">
+    <h1>About Page</h1>
+    <p>Um pouco sobre nós.</p>
+    <p><a class="btn btn-primary btn-lg" onclick="testing()" role="button">Click Me</a></p>
 </div>
 
 <script src="common/about.js"></script>
