--- a/JquerySPA/src/common/contact.html
+++ b/JquerySPA/src/common/contact.html
@@ -1,5 +1,4 @@
-﻿<div class="row">
-    <div class="col-xs-12">
-        <h1>Contact Us Page</h1>
-    </div>
+﻿<div class="jumbotron">
+    <h1>Contact Us Page</h1>
+    <p>Entre em contato conosco</p>
 </div>
