--- a/JquerySPA/src/common/home.html
+++ b/JquerySPA/src/common/home.html
@@ -1,5 +1,4 @@
-﻿<div class="row">
-    <div class="col-xs-12">
-        <h1>Home Page</h1>
-    </div>
+﻿<div class="jumbotron">
+    <h1>Home Page</h1>
+    <p>Página inicial</p>    
 </div>
